<resources>
    <string name="app_name">My App Portfolio</string>

    <!-- component names -->
    <string name="title">My Nanodegree Apps</string>
    <string name="movies">POPULAR MOVIES</string>
    <string name="stockHawk">STOCK HAWK</string>
    <string name="bigger">BUILD IT BIGGER</string>
    <string name="materialApp">MAKE YOUR APP MATERIAL</string>
    <string name="ubiquitous">GO UBIQUITOUS</string>
    <string name="capstone">CAPSTONE:MY OWN APP</string>
</resources>
